Fix tooltip arrow alignment

--- a/main.css
+++ b/main.css
@@ -857,28 +857,29 @@ main {
 .tooltip-arrow-top::before {
 	border-top-color: var(--tooltip-color);
 	left: 50%;
-	transform: translateX(-50%);
+	bottom: 0;
+	transform: translate3d(-50%, 100%, 0);
 }
 
 .tooltip-arrow-bottom::before {
 	border-bottom-color: var(--tooltip-color);
-	top: calc(var(--tooltip-arrow-size) * -2);
 	left: 50%;
-	transform: translateX(-50%);
+	top: 0;
+	transform: translate3d(-50%, -100%, 0);
 }
 
 .tooltip-arrow-left::before {
 	border-left-color: var(--tooltip-color);
 	top: 50%;
-	right: calc(var(--tooltip-arrow-size) * -2);
-	transform: translateY(-50%);
+	right: 0;
+	transform: translate3d(100%, -50%, 0);
 }
 
 .tooltip-arrow-right::before {
 	border-right-color: var(--tooltip-color);
 	top: 50%;
-	left: calc(var(--tooltip-arrow-size) * -2);
-	transform: translateY(-50%);
+	left: 0;
+	transform: translate3d(-100%, -50%, 0);
 }
 
 /* #endregion Tooltip */
